# malcolm-appraiser

./: .gitignore  README.md  pyproject.toml
examples/: README.md  bayesian_inference.md  simple_function.ipynb
src/malcolm_appraiser/: __init__.py  malcolm_sampler.py  malcolms_service_pb2.py  malcolms_service_pb2.pyi  malcolms_service_pb2_grpc.py
tests/: test_malcolm_sampler.py
