[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "malcolm-appraiser"
version = "0.0.1"
authors = [
  { name="Pierre-Louis Nordmann" },
]
description = "A simple appraiser for bayesian inference."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "protobuf==4.21.9",
  "grpcio==1.50.0",
  "pytest==7.2.0",
  "grpcio-testing==1.50.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/p-nordmann/malcolm-appraiser"
"Bug Tracker" = "https://github.com/p-nordmann/malcolm-appraiser/issues"